# gpt-karaok-backend

./: .env.example  .gitignore  main.py  pyproject.toml
lib/: config.py  generator.py  google_images.py  markdown.py  openai_access.py  pptx_factory.py  presentation.py  prompts.py  types.py  utils.py
template/pptx/: template-16-9-basic-blue - Kopie.pptx  template-16-9-basic-white.pptx  template-16-9-colorful-shitfonts.pptx  template-16-9-ugly-wild-animations.pptx  template-white-16-9-shitfonts.pptx  template-white-16-9.pptx
template/topics/: topics-50-1.json  topics-50-2.json
